action: cd and run test in same run command

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,7 @@ jobs:
         run: haxelib dev reflaxe_go .
       - name: install reflaxe
         run: haxelib git reflaxe https://github.com/SomeRanDev/reflaxe b8ece497a10f22e4e4bdcab735a637b1e8e419f4
-      - name: cd test
-        run: cd test
       - name: run test
-        run: haxe --run TestRunner ./tests
+        run: cd test && haxe --run TestRunner ./tests
       
       
