--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
         run: haxelib dev reflaxe_go .
       - name: install reflaxe
         run: haxelib git reflaxe https://github.com/SomeRanDev/reflaxe b8ece497a10f22e4e4bdcab735a637b1e8e419f4
+      - name: go mod init
+        run: go mod init reflaxe_go
       - name: goimporter
         run: go build golang.org/x/tools/cmd/goimports
       - name: run test
